--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 GraphsImplementation/GraphsImplementation.cbp
+GraphsImplementation/bin/Debug/GraphsImplementation.exe
+GraphsImplementation/obj/Debug/main.o
+GraphsImplementation/GraphsImplementation.depend
+GraphsImplementation/GraphsImplementation.layout
